switch logo svg to png

--- a/Prerelease.ipynb
+++ b/Prerelease.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Matplotlib logo](https://matplotlib.org/stable/index.html)"
+    "![Matplotlib logo](https://matplotlib.org/stable/_images/sphx_glr_logos2_003.png)"
    ]
   },
   {
