rename tutorial file

--- a/matplotlib-tutorial.ipynb
+++ b/matplotlib-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "classified-payday",
+   "id": "fixed-vision",
    "metadata": {},
    "source": [
     "# Getting Started with Matplotlib"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nonprofit-father",
+   "id": "regulated-lighter",
    "metadata": {},
    "source": [
     "![Matplotlib logo](https://matplotlib.org/stable/_images/sphx_glr_logos2_003.png)"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "republican-mountain",
+   "id": "weighted-department",
    "metadata": {},
    "source": [
     "## Objectives:\n",
@@ -32,16 +32,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "progressive-section",
+   "id": "incorporate-alfred",
    "metadata": {},
    "source": [
     "## Other Resources:\n",
-    "- matplotlib hosted on github: https://github.com/matplotlib/matplotlib"
+    "- [Matplotlib's example gallery](https://matplotlib.org/stable/gallery/index.html)\n",
+    "- [Curated matplotlib examples](https://matplotlib.org/stable/tutorials/introductory/sample_plots.html)\n",
+    "- [A good interactive matplotlib tutorial from datacamp](https://www.datacamp.com/community/tutorials/matplotlib-tutorial-python)\n",
+    "- [A good pickle tutorial from datacamp](https://www.datacamp.com/community/tutorials/pickle-python-tutorial)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "endless-stock",
+   "id": "present-accent",
    "metadata": {},
    "source": [
     "## Set up\n",
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "cheap-wrapping",
+   "id": "agreed-wayne",
    "metadata": {},
    "source": [
     "conda install -c conda-forge matplotlib numpy"
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "casual-figure",
+   "id": "encouraging-insert",
    "metadata": {},
    "source": [
     "After installing these packages, you will want to restart the Kernel. You can do this by going to the Kernel tab in Jupyter lab and clicking `Restart Kernel`.\n",
@@ -70,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "seasonal-hawaiian",
+   "id": "incredible-disease",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-lender",
+   "id": "killing-chapter",
    "metadata": {},
    "source": [
     "And finally, we can import matplotlib and numpy into the notebook."
@@ -88,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "daily-egypt",
+   "id": "organizational-costume",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opponent-scratch",
+   "id": "uniform-niagara",
    "metadata": {},
    "source": [
     "For the purpose of clarity, notice that we are importing [matplotlib's pyplot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.html) interface as plt."
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "former-transcription",
+   "id": "danish-wednesday",
    "metadata": {},
    "source": [
     "## Anatomy of a matplotlib figure"
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "backed-budget",
+   "id": "private-morgan",
    "metadata": {},
    "source": [
     "![Matplotlib logo](https://matplotlib.org/stable/_images/anatomy.png)"
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sapphire-broad",
+   "id": "editorial-mayor",
    "metadata": {},
    "source": [
     "Matplotlib has two core objects: [Figure](https://matplotlib.org/stable/api/_as_gen/matplotlib.figure.Figure.html) and [Axes](https://matplotlib.org/stable/api/axes_api.html). The `Figure` keeps track of all the child `Axes` or other [Artists](https://matplotlib.org/stable/api/artist_api.html). Almost everything in a matplotlib figure is a type of `Artist`, including `Figure`s and `Axes` themselves. Other types of `Artist`s include [Text](https://matplotlib.org/stable/api/text_api.html) and [Legend](https://matplotlib.org/stable/api/legend_api.html), for example."
@@ -130,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advised-louis",
+   "id": "cooked-anthony",
    "metadata": {},
    "source": [
     "## Basic plot"
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "egyptian-knight",
+   "id": "differential-religious",
    "metadata": {},
    "source": [
     "Use numpy to define two small arrays."
@@ -147,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "designed-lloyd",
+   "id": "short-reach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mature-talent",
+   "id": "rolled-conflict",
    "metadata": {},
    "source": [
     "Create a plot with matplotlib by making a figure, the axes, and then plotting."
@@ -166,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "saving-testing",
+   "id": "horizontal-emerald",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-israel",
+   "id": "beautiful-secret",
    "metadata": {},
    "source": [
     "However, you don't explicity have to call the figure and axes before making a plot. Many matplotlib calls will make them for you. For instance, the same plot can be created in one call:"
@@ -204,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "descending-start",
+   "id": "talented-bahrain",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "departmental-tuner",
+   "id": "mysterious-triple",
    "metadata": {},
    "source": [
     "There are lots of different ways to make a plot and reference it's figure and axes. Below, we create a figure explicitly, and then use `plt.gca()` to get the current axes.\n",
@@ -239,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fifty-tuning",
+   "id": "middle-desktop",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "comprehensive-championship",
+   "id": "atomic-december",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "physical-theory",
+   "id": "missing-shape",
    "metadata": {},
    "source": [
     "## Plotting the Southern Oscillation Index\n",
@@ -291,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "rocky-capital",
+   "id": "global-television",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thick-vocabulary",
+   "id": "polyphonic-parking",
    "metadata": {},
    "source": [
     "Load the date from the picke file. "
@@ -309,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "blank-throw",
+   "id": "gross-consumer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italian-candle",
+   "id": "utility-replacement",
    "metadata": {},
    "source": [
     "Make a figure, similar to above, and plot the data to see what it looks like."
@@ -335,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "educated-exclusion",
+   "id": "unique-cotton",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alive-client",
+   "id": "brazilian-craft",
    "metadata": {},
    "source": [
     "It's kind of hard to tell what's happening. Let's add a line through y=0."
@@ -371,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "perfect-offense",
+   "id": "abstract-russian",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liquid-assets",
+   "id": "informational-chocolate",
    "metadata": {},
    "source": [
     "We can also compress and center the y axis to more clearly see the data. Lets also change the figure size to extend the x-axis."
@@ -403,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "operating-pearl",
+   "id": "optical-amazon",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vanilla-interim",
+   "id": "civilian-chicago",
    "metadata": {},
    "source": [
     "And let's add some colors to the plot, shading it red above y=0 and blue below y=0"
@@ -439,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dedicated-attribute",
+   "id": "center-wrestling",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laughing-sharing",
+   "id": "suitable-portrait",
    "metadata": {},
    "source": [
     "That looks good, let's add some titles and axes labels to finish it up."
@@ -472,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "guilty-kennedy",
+   "id": "tutorial-brooks",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-pharmaceutical",
+   "id": "rubber-pantyhose",
    "metadata": {},
    "source": [
     "# Making a Plotting Script"
@@ -504,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "negative-priest",
+   "id": "billion-indian",
    "metadata": {},
    "source": [
     "Let's convert the plot we just made into a python script that can be executed from the command line.\n",
@@ -514,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-montreal",
+   "id": "banned-medicare",
    "metadata": {},
    "source": [
     "``` python\n",
@@ -561,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closing-myrtle",
+   "id": "perceived-depth",
    "metadata": {},
    "source": [
     "The main difference between plotting in a script versus plotting in the Jupyter notebook is the last call at the botton: `plot.show()`. This call is necessary for the plot to appear. Without it, the plot will be created, but not displayed."
@@ -569,15 +572,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unavailable-stanford",
+   "id": "secondary-budapest",
    "metadata": {},
    "source": [
-    "Let's run this script. Open up a terminal in Jupyter Lab. Run it bu executing the command:"
+    "Let's run this script. Open up a terminal in Jupyter Lab. Run it by executing the command:"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "significant-procurement",
+   "id": "specialized-postcard",
    "metadata": {},
    "source": [
     "$ python myfirstplot.py"
@@ -585,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-artist",
+   "id": "gothic-singapore",
    "metadata": {},
    "source": [
     "It can also be executed directly from the jupyter notebook by executing the following cell:"
@@ -594,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "center-faith",
+   "id": "dressed-baltimore",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "waiting-ethics",
+   "id": "sealed-deviation",
    "metadata": {},
    "outputs": [],
    "source": []
