added plotting scripts for all examples

--- a/matplotlib-tutorial.ipynb
+++ b/matplotlib-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "front-animation",
+   "id": "trying-saver",
    "metadata": {},
    "source": [
     "# Getting Started with Matplotlib"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minus-conflict",
+   "id": "broke-animation",
    "metadata": {},
    "source": [
     "![Matplotlib logo](https://matplotlib.org/stable/_images/sphx_glr_logos2_003.png)"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thousand-hotel",
+   "id": "accessory-aside",
    "metadata": {},
    "source": [
     "## Objectives:\n",
@@ -26,13 +26,14 @@
     "1. Download matplotlib\n",
     "2. Understanding matplotlib figures\n",
     "3. Create a basic plot\n",
-    "4. Using matplotlib to create a geophysical plot\n",
-    "5. Making a plotting script"
+    "4. Plotting with 2D data\n",
+    "5. Using matplotlib to create a geophysical plot\n",
+    "6. Making a plotting script"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "colonial-showcase",
+   "id": "representative-monkey",
    "metadata": {},
    "source": [
     "## Other Resources:\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adult-publication",
+   "id": "pleased-lotus",
    "metadata": {},
    "source": [
     "## Set up\n",
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "informed-occasion",
+   "id": "streaming-printing",
    "metadata": {},
    "source": [
     "conda install matplotlib numpy"
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secondary-leadership",
+   "id": "excellent-petersburg",
    "metadata": {},
    "source": [
     "After installing these packages, you will want to restart the Kernel. You can do this by going to the Kernel tab in Jupyter lab and clicking `Restart Kernel`.\n",
@@ -73,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "integrated-ethnic",
+   "id": "judicial-saturn",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "substantial-terrain",
+   "id": "continuing-button",
    "metadata": {},
    "source": [
     "And finally, we can import matplotlib and numpy into the notebook."
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "received-blowing",
+   "id": "decreased-prototype",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooked-vintage",
+   "id": "diverse-context",
    "metadata": {},
    "source": [
     "For the purpose of clarity, notice that we are importing [matplotlib's pyplot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.html) interface as plt."
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "married-tampa",
+   "id": "involved-facing",
    "metadata": {},
    "source": [
     "## Anatomy of a matplotlib figure"
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "returning-wesley",
+   "id": "fifty-deadline",
    "metadata": {},
    "source": [
     "![Matplotlib logo](https://matplotlib.org/stable/_images/anatomy.png)"
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grateful-worst",
+   "id": "consistent-sheep",
    "metadata": {},
    "source": [
     "Matplotlib has two core objects: [Figure](https://matplotlib.org/stable/api/_as_gen/matplotlib.figure.Figure.html) and [Axes](https://matplotlib.org/stable/api/axes_api.html). The `Figure` keeps track of all the child `Axes` or other [Artists](https://matplotlib.org/stable/api/artist_api.html). Almost everything in a matplotlib figure is a type of `Artist`, including `Figure`s and `Axes` themselves. Other types of `Artist`s include [Text](https://matplotlib.org/stable/api/text_api.html) and [Legend](https://matplotlib.org/stable/api/legend_api.html), for example."
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "environmental-atlantic",
+   "id": "compliant-judges",
    "metadata": {},
    "source": [
     "## Basic plot"
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automotive-details",
+   "id": "sacred-childhood",
    "metadata": {},
    "source": [
     "Use numpy to define two small arrays."
@@ -150,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "advisory-independence",
+   "id": "anonymous-gathering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "phantom-diversity",
+   "id": "micro-spelling",
    "metadata": {},
    "source": [
     "Create a plot with matplotlib by making a figure, the axes, and then plotting."
@@ -169,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "finite-black",
+   "id": "occupied-breathing",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-archive",
+   "id": "prerequisite-canyon",
    "metadata": {},
    "source": [
     "However, you don't explicity have to call the figure and axes before making a plot. Many matplotlib calls will make them for you. For instance, the same plot can be created in one call:"
@@ -207,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "steady-stomach",
+   "id": "healthy-alert",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spare-influence",
+   "id": "hired-block",
    "metadata": {},
    "source": [
     "There are lots of different ways to make a plot and reference it's figure and axes. Below, we create a figure explicitly, and then use `plt.gca()` to get the current axes.\n",
@@ -242,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "going-description",
+   "id": "respected-salmon",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinguished-juvenile",
+   "id": "binding-rates",
    "metadata": {},
    "source": [
     "# 2D Plot\n",
@@ -281,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "comprehensive-chapter",
+   "id": "destroyed-physiology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "psychological-insight",
+   "id": "outdoor-asthma",
    "metadata": {},
    "source": [
     "Now, let's make a plot of what we created using matplotlib's [imshow](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.imshow.html), which displays data as an image."
@@ -304,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "arabic-sound",
+   "id": "collected-bracket",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-architecture",
+   "id": "heavy-producer",
    "metadata": {},
    "source": [
     "Notice that the x and y scales seem really off. This is because matplotlib isn't aware of the range we originally made x and y with and is using the actual number of points to mark the axes. We can adjust this by setting the `extent` on the original call."
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "eligible-rebecca",
+   "id": "judicial-geography",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "educated-parts",
+   "id": "sweet-recall",
    "metadata": {},
    "source": [
     "There are of course other things we can change about this plot. For one, you might notice how smooth it looks. This is because, by default, `imshow` uses and antialiased interpolation method. We can also change the color map used and add a colorbar to understand the values displayed better. There are a ton of [colormap options](https://matplotlib.org/stable/tutorials/colors/colormaps.html) and you can make your own, too. \n",
@@ -370,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "adjustable-stream",
+   "id": "accessible-advertising",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "settled-rebate",
+   "id": "double-flour",
    "metadata": {},
    "source": [
     "This is not the only way to display 2D data. There are several other matplotlib functions commonly used for this purpose, such as [contour](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.contour.html) and [contourf](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.contourf.html)."
@@ -401,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "apparent-victim",
+   "id": "civilian-cheese",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +419,7 @@
     }
    ],
    "source": [
-    "# Make a 1x3 subplots\n",
+    "# Make 1x3 subplots\n",
     "fig, ax = plt.subplots(nrows=1, ncols=3)\n",
     "\n",
     "# Plot the imshow we made above on the first plot\n",
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absolute-muslim",
+   "id": "sealed-wilderness",
    "metadata": {},
    "source": [
     "You'll notice that the axes for imshow are square, while the axes from contour and contourf are stretched. This is because imshow is designed to show images. You'll also notice that the y axis appears to be flipped. This is because the first plot os actually incorrect. By default, imshow places [0, 0] in the upper left corner, as would be expected with image data, while our [0, 0] should actually be in the lower left corner. We can address both of these issues below."
@@ -445,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "inclusive-skirt",
+   "id": "boxed-launch",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prompt-condition",
+   "id": "emerging-excuse",
    "metadata": {},
    "source": [
     "## Plotting the Southern Oscillation Index\n",
@@ -493,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "proof-massachusetts",
+   "id": "inclusive-roommate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "combined-external",
+   "id": "convertible-somerset",
    "metadata": {},
    "source": [
     "Load the date from the picke file. "
@@ -511,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "substantial-anatomy",
+   "id": "developing-division",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-capture",
+   "id": "reported-entity",
    "metadata": {},
    "source": [
     "Make a figure, similar to above, and plot the data to see what it looks like."
@@ -537,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "differential-teens",
+   "id": "terminal-medium",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +560,7 @@
     "ax = plt.gca()\n",
     "\n",
     "ax.plot(date, soi, color='black', linewidth=0.5, label=\"soi\")\n",
-    "ax.plot(date, dsoi, color='black', label='dsoi');\n",
+    "ax.plot(date, dsoi, color='black', label='dsoi')\n",
     "\n",
     "# add a legend\n",
     "plt.legend();"
@@ -567,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "individual-importance",
+   "id": "mediterranean-method",
    "metadata": {},
    "source": [
     "It's kind of hard to tell what's happening. Let's add a line through y=0."
@@ -576,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "unauthorized-drink",
+   "id": "fatal-museum",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extreme-indication",
+   "id": "expanded-neighbor",
    "metadata": {},
    "source": [
     "We can also compress and center the y axis to more clearly see the data. Lets also change the figure size to extend the x-axis."
@@ -608,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "postal-midwest",
+   "id": "golden-focus",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-instruction",
+   "id": "organic-retrieval",
    "metadata": {},
    "source": [
     "And let's add some colors to the plot, shading it red above y=0 and blue below y=0"
@@ -644,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "introductory-coast",
+   "id": "breeding-contents",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "declared-arthritis",
+   "id": "preceding-stephen",
    "metadata": {},
    "source": [
     "That looks good, let's add some titles and axes labels to finish it up."
@@ -677,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "surgical-transportation",
+   "id": "strong-journalist",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "utility-calgary",
+   "id": "blond-wireless",
    "metadata": {},
    "source": [
     "# Making a Plotting Script"
@@ -709,17 +710,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standard-denver",
+   "id": "descending-scientist",
    "metadata": {},
    "source": [
     "Let's convert the plot we just made into a python script that can be executed from the command line.\n",
     "\n",
-    "First, open a new file, called something like `myfirstplot.py`. In this file, we can create a script from the code blocks. Feel free to copy and paste this bit below into your file."
+    "First, open a new file, called something like `soi_plot.py`. In this file, we can create a script from the code blocks. Feel free to copy and paste this bit below into your file."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "defined-joint",
+   "id": "closing-filing",
    "metadata": {},
    "source": [
     "``` python\n",
@@ -767,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "possible-minister",
+   "id": "dated-warrior",
    "metadata": {},
    "source": [
     "The main difference between plotting in a script versus plotting in the Jupyter notebook is the last call at the botton: `plot.show()`. This call is necessary for the plot to appear. Without it, the plot will be created, but not displayed."
@@ -775,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contained-minimum",
+   "id": "continental-pledge",
    "metadata": {},
    "source": [
     "Let's run this script. Open up a terminal in Jupyter Lab. Run it by executing the command:"
@@ -783,7 +784,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "nuclear-detroit",
+   "id": "waiting-ensemble",
    "metadata": {},
    "source": [
     "$ python myfirstplot.py"
@@ -791,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accompanied-killer",
+   "id": "coupled-rouge",
    "metadata": {},
    "source": [
     "It can also be executed directly from the jupyter notebook by executing the following cell:"
@@ -800,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "running-simpson",
+   "id": "frozen-circus",
    "metadata": {},
    "outputs": [
     {
